lab1/Test/L1-A-10-35.output
Error Type A at Line 6
Error Type A at Line 15
Error Type A at Line 19
Error Type B at Line 41
